# FunnLang

./: .gitignore  Cargo.toml  FunnLang.md  FunnLang.urcl  Makefile  README.md  TODO.md  a.out  out.s  source.funn
examples/: fib.funn  helloworld.funn
lib/libc/: stdlib.funn
lib/std/aa64/: io.funn
lib/std/rv64/: io.funn
lib/std/wasm/: io.funn
lib/std/x64/: io.funn
src/: buffer.rs  lexer.rs  main.rs  parser.rs  preprocess.rs  scanner.rs  token.rs
src/ast/: mod.rs  nodes.rs
src/compiler/: ast_compiler.rs  mod.rs
src/compiler/aarch64/: mod.rs
src/errors/: error.rs  mod.rs
std/: io.funn
std/any/: runtime_start.funn
std/x64/: io.funn
