[package]
name = "funnlang"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
repository = "https://github.com/funnsam/funnlang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features=["derive"] }
codegem = "0.2.2"

[profile.release]
lto = true
overflow-checks = false

[profile.dev]
overflow-checks = false