[package]
name = "funnlang"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
repository = "https://github.com/funnsam/funnlang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features=["derive"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }

[profile.release]
lto = true
overflow-checks = false

[profile.dev]
overflow-checks = false
